--- a/site_CyberNova/htmlFiles/home.html
+++ b/site_CyberNova/htmlFiles/home.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../cssFiles/home.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
-    <title>Cyber Nova</title>
-    <link rel="icon" type="image/png" href="../CNlogo.png">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <meta property="og:title" content="Cyber Nova">
+        <meta property="og:description" content="Founded in 2024, CyberNova Studios is dedicated to creating high-quality experiences on Roblox. Our goal is simple: to bring better, more immersive games to the platform. With a passion for innovation and attention to detail, we're here to raise the bar and deliver unforgettable adventures for players everywhere.">
+        <meta property="og:image" content="https://cybernovafun.github.io/CyberNova/site_CyberNova/CNlogo.png">
+        <meta property="og:url" content="https://cybernovafun.github.io/CyberNova/site_CyberNova/htmlFiles/home.html">
+        <meta property="og:type" content="website">
+        <meta property="theme-color" content="#000000">
+        
+        <link rel="stylesheet" href="../cssFiles/home.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+        <title>Cyber Nova</title>
+        <link rel="icon" type="image/png" href="../CNlogo.png">
+    </head>    
 <body id="home">
     <nav class="navbar">
         <div class="logo-container">
