--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="home">
     <nav class="navbar">
         <div class="logo-container">
-            <img src="../CNlogo.png" alt="Cyber Nova Logo">
+            <img src="CNlogo.png" alt="Cyber Nova Logo">
             <span>Cyber Nova</span>
         </div>
         <div class="nav-links">
@@ -70,7 +70,7 @@
             
             <div class="game-container">
                 <div class="game-card">
-                    <img src="../gameicon1.png" alt="Game Icon" class="game-icon">
+                    <img src="gameicon1.png" alt="Game Icon" class="game-icon">
                     <div class="coming-soon-badge">
                         <span class="sway-text">Coming Soon</span>
                     </div>                
@@ -87,6 +87,6 @@
         <p class="copyright">Copyright © 2025 Cyber Nova | Designed by NOT_FIND</p>
     </footer>    
 
-    <script src="../jsFiles/home.js"></script>
+    <script src="jsFiles/home.js"></script>
 </body>
 </html>
