--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=1.0, user-scalable=no">
         
         <meta property="og:title" content="Cyber Nova">
         <meta property="og:description" content="Founded in 2024, CyberNova Studios is dedicated to creating high-quality experiences on Roblox. Our goal is simple: to bring better, more immersive games to the platform. With a passion for innovation and attention to detail, we're here to raise the bar and deliver unforgettable adventures for players everywhere.">
